fix text alignment

--- a/style.scss
+++ b/style.scss
@@ -35,8 +35,11 @@ body {
 .btnStyle{
     background: linear-gradient(228.85deg, #00A0DF 0%, #84b3ff 100%);
     box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.25);
-    border-radius: 12px;font:30px bold; padding:1%; 
-    color: white;border: 0px solid ; 
+    border-radius: 12px;
+    font: 30px bold; 
+    padding: 0%; 
+    color: white;
+    border: 0px solid ; 
     text-decoration: none;
     width: 249px;
     height: 65px;
